--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --text: "Orbitron";
+  --text: "BakBak";
   --mainColor: #ffffff;
   --minWidth: 320;
   --maxWidth: 1920;
@@ -43,54 +43,14 @@
   
   
   @font-face {
-    font-family: "Orbitron";
+    font-family: "BakBak";
     font-display: swap;
     src: local("Orbitron"),
-      url("./fonts/Orbitron-Black.ttf") format("truetype");
-    font-weight: 900;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: "Orbitron";
-    font-display: swap;
-    src: local("Orbitron"),
-      url("./fonts/Orbitron-Bold.ttf") format("truetype");
-    font-weight: 700;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: "Orbitron";
-    font-display: swap;
-    src: local("Orbitron"),
-      url("./fonts/Orbitron-ExtraBold.ttf") format("truetype");
-    font-weight: 800;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: "Orbitron";
-    font-display: swap;
-    src: local("Orbitron"),
-      url("./fonts/Orbitron-Medium.ttf") format("truetype");
-    font-weight: 500;
-    font-style: normal;
-  }
-  @font-face {
-      font-family: "Orbitron";
-    font-display: swap;
-    src: local("Orbitron"),
-      url("./fonts/Orbitron-Regular.ttf") format("truetype");
+      url("./fonts/BakbakOne-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
   }
-  @font-face {
-      font-family: "Orbitron";
-    font-display: swap;
-    src: local("Orbitron"),
-      url("./fonts/Orbitron-SemiBold.ttf") format("truetype");
-    font-weight: 600;
-    font-style: normal;
-  }
-  
+
   
   * {
     padding: 0px;
