--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --text: "BakBak";
-  --mainColor: #ffffff;
+  --mainColor: #1c2520;
   --minWidth: 320;
   --maxWidth: 1920;
   }
@@ -21,6 +21,8 @@
   
   #root {
     /* background: url("./img/silver_bg.webp") no-repeat center center; */
+    background: linear-gradient(180deg, #0b1f46 0%, #000 100%);
+    /* background: #A0F39C; */
     background-size: cover;
     min-height: 100%;
     position: relative;
@@ -64,38 +66,16 @@
   *:after {
     box-sizing: border-box;
   }
-  :focus,
-  :active {
-    /* outline: none; */
-  }
-  a:focus,
-  a:active {
-    /* /outline: none; */
-  }
   body {
     line-height: 1;
     font-family: var(--text);
     font-size: 14px;
-    color: rgb(0, 0, 0);
-    /* text-rendering: optimizeLegibility; */
+    color: var(--mainColor);
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  }
-  /* body::-webkit-scrollbar {
-    width: 0.3125rem;
-  }
-  
-  body::-webkit-scrollbar-track {
-    background: rgba(15, 4, 36, 0.726);
-  }
-  
-  body::-webkit-scrollbar-thumb {
-    background-color: linear-gradient(146deg, #5c556c 0%, #717f90 100%);
-    border-radius: 1.25rem;
-    border: 0.1875rem solid #717f90;
   }
   input,
   button,
@@ -127,7 +107,6 @@
   h6 {
     font-weight: inherit;
     font-size: inherit;
-    font-family: "gropled";
   }
   /* Common.. */
   
@@ -147,31 +126,45 @@
     width: fit-content;
     height: 0.9375rem
   }
-    progress {
-      border-radius: 5px;
-      width: 100%;
-      height: 100%;
-    }
-    progress::-webkit-progress-bar {
-      background-color: rgba(0, 0, 0, 0.16);
-      border-radius: 1.25rem;
-      box-shadow: inset 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.25);
-    }
-    progress::-webkit-progress-value {
-      background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
-      border-radius: 1.25rem;
-      box-shadow: inset 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.25);
-    }
+  progress {
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+  }
+  progress::-webkit-progress-bar {
+    background-color: rgba(0, 0, 0, 0.16);
+    border-radius: 1.25rem;
+    box-shadow: inset 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.25);
+  }
+  progress::-webkit-progress-value {
+    background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
+    border-radius: 1.25rem;
+    box-shadow: inset 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.25);
+  }
+
+  .active {
+    display: block!important;
+    overflow: hidden;
+  }
+
+  .active button {
+    opacity: 1;
+    color: #fff;
+    border: 1px solid #fff;
+    background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  }
+
+  body::-webkit-scrollbar {
+    width: 0.3125rem;
+  }
   
-    .active {
-      display: block!important;
-      overflow: hidden;
-    }
+  body::-webkit-scrollbar-track {
+    background: rgba(15, 4, 36, 0.726);
+  }
   
-    .active button {
-      opacity: 1;
-      color: #fff;
-      border: 1px solid #fff;
-      background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
-      box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-    }
+  body::-webkit-scrollbar-thumb {
+    background-color: linear-gradient(146deg, #5c556c 0%, #717f90 100%);
+    border-radius: 1.25rem;
+    border: 0.1875rem solid #717f90;
+  }
