--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 :root {
   --text: "BakBak";
   --mainColor: #1c2520;
-  --minWidth: 320;
-  --maxWidth: 1920;
+  --minWidth: 390px;
+  --maxWidth: 1920px;
   }
   
   *,
@@ -20,9 +20,7 @@
   }
   
   #root {
-    /* background: url("./img/silver_bg.webp") no-repeat center center; */
-    background: linear-gradient(180deg, #0b1f46 0%, #000 100%);
-    /* background: #A0F39C; */
+    background: #A0F39C;
     background-size: cover;
     min-height: 100%;
     position: relative;
@@ -155,7 +153,7 @@
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
   }
 
-  body::-webkit-scrollbar {
+  /* body::-webkit-scrollbar {
     width: 0.3125rem;
   }
   
@@ -167,4 +165,4 @@
     background-color: linear-gradient(146deg, #5c556c 0%, #717f90 100%);
     border-radius: 1.25rem;
     border: 0.1875rem solid #717f90;
-  }
+  } */
