--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -2,27 +2,112 @@
 $mobile: 1399.98px;
 
 .mainContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   width: 100%;
   height: 100%;
   top: 75px;
-    &__gamePaused {
+  &__gameContent {
+    width: 100%;
+    height: 100%;
+  }
+  &__gameContentBox {
+    width: 100%;
+    height: 100%;
+  }
+  &__gamePaused {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       position: fixed;
+      width: 100%;
       height: 100%;
+      margin-top: -75px;
       h4 {
         font-size: 22px;
-      }    
+      }   
       p {
+        margin-top: 20px;
         font-size: 16px;
         text-align: center;
         align-content: center;
-      }  
-      img {
-        width: 275px;
-      }
-     }
+      }      
+  }
+  &__imageContainer {
+    margin-top: 20px;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 260px; 
+    height: 260px; 
+    overflow: hidden;
+    img {        
+      width: 100%;
+      height: 100%;
+      position: absolute;
+    } 
+  }
+  &__clickArea {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    img {        
+      width: 100%;
+      height: 100%;
+      position: absolute;
+    } 
+  }
+  &__coins {
+    @media (max-width: $mobile) {
+     position: relative;
+     justify-content: center;
+     display: flex;
+    }
+   }
+  &__coinBox {
+    backdrop-filter: blur(24px);
+    background: #80c27d;
+    border: 2px solid #1c2520;
+    border-radius: 77px;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    align-self: center;
+    justify-content: center;
+    padding: 10px 14px;
+   }
+   &__coinImg {
+    display: flex;
+    align-items: center;
+    margin-right: 0.625rem;
+    width: 28px;
+    height: 28px;
+    border: 2px solid #1c2520;
+    border-radius: 62px;
+    background: #80c27d;
+    img {
+     width: 100%;
+    }
+   }
+   &__coinAmount {
+    display: flex;
+    align-items: center;
+    span {
+     font-weight: 400;
+     font-size: 28px;
+     line-height: 100%;
+     letter-spacing: 0.01em;
+     color: #000;
+    }
+   }
   }
