--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -139,8 +139,8 @@
     }
     &__close {
       position: absolute;
-      top: 12px;
-      right: 12px;
+      top: 24px;
+      right: 24px;
     }
     &__title {
         margin-top: 50px;
@@ -235,37 +235,6 @@
             color: #0d9047;
         }
     }
- 
-  &__icon {
-      position: absolute;
-      left: 0;
-      top: 0;
-      background-color: #000;
-      border-radius: 50%;
-    
-    }
- 
-    &__item-box {
-      border: 0.125rem solid #fff;
-      border-radius: 1.875rem;
-      padding: 3.125rem 1.875rem;
-    }
-    &__item-group {
-      display: flex;
-      flex-direction: column;
-      &:not(:last-child) {
-        margin-bottom: 1.875rem;
-      }
-      p {
-        font-weight: 400;
-        font-size: 1.125rem;
-        line-height: 140%;
-        color: #fff;
-        &:not(:last-child) {
-          margin-bottom: 0.9375rem;
-        }
-      }
-    }
     .inviteLinkBtn {
         border-radius: 10px;
         height: 44px;
@@ -288,28 +257,177 @@
   }
 
   .popupLeaderboard {
+    padding: 0 12px;
     &__wrapper {
         flex-direction: column;
         align-items: center;
         min-height: 100%;
         width: 100%;
         display: flex;
+    }
+    &__content {
+    margin-top: 64px;
+    border: 2px solid #0d9047;
+    border-radius: 20px;
+    padding: 0px 12px 17px 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #84c881;
+    position: relative;
+    }
+    &__close {
+        position: absolute;
+        top: 24px;
+        right: 24px;
+    }
+    &__title {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        margin-top: 24px;
+        gap: 12px;
+        h4 {
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 100%;
+            color: #1c2520;
+        }
+    }
+    &__playerList {
+        margin-top: 28px;
+        width: 100%;
       }
-      &__content {
-        margin-top: 64px;
-        border: 2px solid #0d9047;
-        border-radius: 20px;
-        padding: 0px 12px 17px 12px;
+      &__table {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background: #84c881;
-        position: relative;
+        width: 100%;
+        gap: 0.625rem;
       }
-      &__close {
+      &__tableItem {
+        border: 1px solid #3f3773;
+        display: flex;
+        flex-direction: row;
+        border-radius: 10px;
+        justify-content: space-between;
+        padding-left: 20px;
+        padding-right: 10px;
+        height: 40px;
+        .popupLeaderboard__id {
+          font-weight: 700;
+          font-size: 20px;
+          line-height: 100%;
+          letter-spacing: 0.02em;
+          text-align: center;
+          svg {
+            display: none;
+            position: absolute;
+          }
+        }
+        .popupLeaderboard__playerName {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 100%;
+          letter-spacing: 0.02em;
+        }
+        .popupLeaderboard__coins {
+          font-weight: 700;
+          font-size: 20px;
+          line-height: 100%;
+          letter-spacing: 0.02em;
+        }
+      }
+      &__tableItem:first-child {
+        border-bottom: 1px solid #3dff34;
+        border-left: 10px solid #3dff34;
+        border-right: 1px solid #3dff34;
+        border-top: 1px solid #3dff34;
+        padding-left: 12px;
+        background: rgba(8, 18, 41, 0.6);
+        span {
+            color: #3dff34;
+        }
+        .popupLeaderboard__id {
+          svg {
+            display: block;
+            left: -9px;
+            path {
+                fill: #3dff34;
+              }
+          }
+        }
+      }
+      &__tableItem:nth-child(2) {
+        border-bottom: 1px solid #08ae00;
+        border-left: 10px solid #08ae00;
+        border-right: 1px solid #08ae00;
+        border-top: 1px solid #08ae00;
+        padding-left: 12px;
+        background: rgba(8, 18, 41, 0.6);
+        span {
+            color: #08ae00;
+        }
+        .popupLeaderboard__id {
+          svg {
+            display: block;
+            left: -8px;
+            path {
+              fill: #08ae00;
+            }
+          }
+        }
+      }
+      &__tableItem:nth-child(3) {
+        border-bottom: 1px solid #0d9047;
+        border-left: 10px solid #0d9047;
+        border-right: 1px solid #0d9047;
+        border-top: 1px solid #0d9047;
+        padding-left: 12px;
+        background: rgba(8, 18, 41, 0.6);
+        span {
+            color: #0d9047;
+        }
+        .popupLeaderboard__id {
+          svg {
+            display: block;
+            left: -8px;
+            path {
+              fill: #0d9047;
+            }
+          }
+        }
+      }
+      &__tableItem:last-child {
+        border: 2px solid #fff;
+        backdrop-filter: blur(16px);
+        background: #2cb726;
+        color: #ffffff;
+      }
+      &__itemData {
+        display: flex;
+        position: relative;
+        flex-direction: row;
+        align-items: center;
+        font-weight: 600;
+        font-size: 1.375rem;
+        line-height: 130%;
+        width: 100%;
+      }
+      &__id {
+        font-size: 20px;
+      }
+      &__playerName {
+        display: flex;
+        flex-direction: row;
+        margin-left: 15px;
+        font-size: 16px;
+      }
+      &__coins {
         position: absolute;
-        top: 12px;
-        right: 12px;
+        display: flex;
+        right: 0;
+        width: fit-content;
+        font-size: 20px;
       }
   }
