--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -1,22 +1,21 @@
-// variables
-$mobile: 1399.98px;
-
 .mainContent {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 75px;
+  height: 581px;
   &__gameContent {
+    top: 45px;
     width: 100%;
-    height: 100%;
+    height: 581px;
   }
   &__gameContentBox {
     width: 100%;
-    height: 100%;
+    height: 581px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   &__gamePaused {
       display: flex;
@@ -67,12 +66,10 @@ $mobile: 1399.98px;
       position: absolute;
     } 
   }
-  &__coins {
-    @media (max-width: $mobile) {
+  &__coins {   
      position: relative;
      justify-content: center;
-     display: flex;
-    }
+     display: flex;    
    }
   &__coinBox {
     backdrop-filter: blur(24px);
@@ -103,11 +100,58 @@ $mobile: 1399.98px;
     display: flex;
     align-items: center;
     span {
-     font-weight: 400;
-     font-size: 28px;
-     line-height: 100%;
-     letter-spacing: 0.01em;
-     color: #000;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 100%;
+    letter-spacing: 0.01em;
+    color: var(--mainColor);
     }
-   }
   }
+  &__totalPoints {
+    position: relative;
+    display: flex;
+    align-self: center;
+    align-items: center;
+    justify-content: center;
+    background: #80c27d;
+    font-family: var(--altText);
+    position: relative;
+    border: 1px solid #1c2520;
+    border-radius: 12px;
+    padding: 8px 18px;
+    gap: 12px;
+    width: fit-content;
+    order: 4;
+   span {
+    font-size: 12px;
+    line-height: 130%;
+    text-align: center;
+    color: var(--mainColor);
+    font-weight: 600;
+  }
+ }
+ &__totalPoints-img {
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  border: 2px solid #1c2520;
+  border-radius: 62px;
+  img {
+    width: 100%;
+   }
+ }
+ &__totalPoints-text {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 4px;
+}
+ &__totalPoints-coins {
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 100%;
+  text-align: center;
+  color: var(--mainColor);
+ }
+}
