--- a/src/index.css
+++ b/src/index.css
@@ -163,6 +163,12 @@
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
   }
 
+  .blackLine {
+    border: 1px solid #1c2520;
+    width: 76px;
+    height: 0px;
+  }
+
   /* body::-webkit-scrollbar {
     width: 0.3125rem;
   }
