--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -1,5 +1,6 @@
 .mainContent {
   position: absolute;
+  margin-top: 35px;
   width: 100%;
   height: 100%;
   height: 581px;
@@ -37,7 +38,6 @@
       }      
   }
   &__imageContainer {
-    margin-top: 20px;
     display: flex;
     position: relative;
     flex-direction: column;
@@ -59,7 +59,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: 430px;
     img {        
       width: 100%;
       height: 100%;
