--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,38 +1,43 @@
 .modalWindow {
+  z-index: 400;
+  position: absolute;
+  transition: visibility 0.8s ease 0s;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  bottom: 0;
+  right: 0;
+  &__wrapper {
+    height: 100%;
+    min-height: 100%;
+    width: 100%;
+    padding: 0 30px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  &__content {
+    flex-direction: column;
+    border: 2px solid #fff;
+    border-radius: 20px;
+    padding: 20px 40px 40px 20px;
+    position: relative;
+    background: linear-gradient(180deg, #0b1f46 0%, #000 100%);
+    transition: transform .3s ease 0s;
+    width: 100%;
+  }
+  &__close {
+    position: absolute;
+    top: 12px;
+    right: 12px;
 }
-
-.modalWindow__wrapper {
-  background: white;
-  padding: 20px;
-  border-radius: 5px;
-  width: 80%;
-  max-width: 500px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-}
-
-.modalWindow__content {
-  position: relative;
-}
-
-.modalWindow__close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: none;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-.modalWindow__title h4 {
-  margin: 0;
+  &__title {
+    font-size: 1.25rem;
+    position: relative;
+    color: #fff;
+    font-weight: 900;
+    line-height: 100%;
+    margin-top: 30px;
+    word-break: break-word;
+  }
 }
