--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -73,8 +73,8 @@
    }
   &__coinBox {
     backdrop-filter: blur(24px);
-    background: #80c27d;
-    border: 2px solid #1c2520;
+		background: var(--altBG);
+    border: 2px solid var(--mainColor);
     border-radius: 77px;
     display: flex;
     align-items: center;
@@ -89,9 +89,9 @@
     margin-right: 0.625rem;
     width: 28px;
     height: 28px;
-    border: 2px solid #1c2520;
+    border: 2px solid var(--mainColor);
     border-radius: 62px;
-    background: #80c27d;
+		background: var(--altBG);
     img {
      width: 100%;
     }
@@ -113,10 +113,10 @@
     align-self: center;
     align-items: center;
     justify-content: center;
-    background: #80c27d;
+		background: var(--altBG);
     font-family: var(--altText);
     position: relative;
-    border: 1px solid #1c2520;
+    border: 1px solid var(--mainColor);
     border-radius: 12px;
     padding: 8px 18px;
     gap: 12px;
@@ -135,7 +135,7 @@
   height: 48px;
   display: flex;
   align-items: center;
-  border: 2px solid #1c2520;
+  border: 2px solid var(--mainColor);
   border-radius: 62px;
   img {
     width: 100%;
