--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,31 +1,18 @@
 .modalWindow {
-  z-index: 400;
-  position: absolute;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	min-width: 328px;
+	min-height: 204px;
+  z-index: 15;
   transition: visibility 0.8s ease 0s;
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-&__wrapper {
-    height: 100%;
-    min-height: 100%;
-    width: 100%;
-    padding: 0 30px;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-&__content {
-    flex-direction: column;
-    border: 2px solid #fff;
-    border-radius: 20px;
-    padding: 20px 40px 40px 20px;
-    position: relative;
-    background: linear-gradient(180deg, #0b1f46 0%, #000 100%);
-    transition: transform .3s ease 0s;
-    width: 100%;
-  }
+	border-radius: 34px;
+	overflow: hidden;
+	padding: 34px 28px 28px 28px;
+	border: 2px solid var(--mainColor);
+	background: var(--altBG);
 &__close {
     position: absolute;
     top: 12px;
@@ -40,10 +27,23 @@
  &__title {
     font-size: 1.25rem;
     position: relative;
-    color: #fff;
+    color: var(--mainColor);
     font-weight: 900;
     line-height: 100%;
     margin-top: 30px;
     word-break: break-word;
   }
+	&__action {
+		margin-top: 10px;
+		padding: 10px 20px;
+		background-color: #007bff;
+    color: var(--mainColor);
+		border: none;
+		border-radius: 5px;
+		cursor: pointer;
+		font-size: 16px;
+	}
+	&__action:hover {
+		background-color: #0056b3;
+	}
 }
