--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
   --text: "BakBak";
   --altText: "Acme";
   --mainColor: #1c2520;
+  --altColor: #fff;
   --minWidth: 390px;
   --mainBG: #A0F39C;
   --altBG: #80c27d;
