--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -188,7 +188,7 @@
         font-size: 24px;
         line-height: 100%;
         letter-spacing: 0.01em;
-        color: var(--mainColor);
+        color: var(--altColor);
       }
     }
     &__refInfo-item {
@@ -197,7 +197,7 @@
             font-size: 24px;
             line-height: 100%;
             letter-spacing: 0.01em;
-            color: var(--mainColor);
+            color: var(--altColor);
         }
     }
     &__grid {
