--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -1,6 +1,5 @@
 .mainContent {
   position: absolute;
-  margin-top: 35px;
   width: 100%;
   height: 100%;
   height: 581px;
@@ -11,12 +10,12 @@
   }
   &__gameContentBox {
     width: 100%;
-    height: 581px;
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
   }
   &__gamePaused {
       display: flex;
@@ -37,6 +36,69 @@
         align-content: center;
       }      
   }
+  &__header {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+  }
+  &__totalCoins {   
+    justify-content: center;
+    display: flex;    
+  }
+ &__totalCoinsBox {
+   backdrop-filter: blur(24px);
+   background: var(--altBG);
+   border: 2px solid var(--mainColor);
+   border-radius: 77px;
+   display: flex;
+   align-items: center;
+   width: fit-content;
+   align-self: center;
+   justify-content: center;
+   padding: 10px 14px;
+  }
+  &__totalCoinsImg {
+   display: flex;
+   align-items: center;
+   margin-right: 10px;
+   width: 28px;
+   height: 28px;
+   border: 2px solid var(--mainColor);
+   border-radius: 62px;
+   background: var(--altBG);
+   img {
+    width: 100%;
+   }
+  }
+  &__totalCoinsAmount {
+   display: flex;
+   align-items: center;
+   span {
+   font-weight: 400;
+   font-size: 28px;
+   line-height: 100%;
+   letter-spacing: 0.01em;
+   color: var(--mainColor);
+   }
+ }
+ &__energyContainer {
+  display: flex;
+  flex-direction: row;
+  font-weight: 600;
+  font-size: 22px;
+  color: var(--altText);
+  margin-top: 15px;
+  align-items: center;
+  font-size: 18px;
+  justify-content: center;
+  .energyCount {
+    margin-left: 7px;
+   }
+  }
+&__energyValue {
+  display: flex;
+  flex-direction: row;
+ }
   &__imageContainer {
     display: flex;
     position: relative;
@@ -54,60 +116,25 @@
   }
   &__clickArea {
     display: flex;
-    position: relative;
+    position: absolute;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 15;
+    background: transparent;
     width: 100%;
-    height: 430px;
+    height: 100%;
     img {        
       width: 100%;
       height: 100%;
       position: absolute;
     } 
   }
-  &__coins {   
-     position: relative;
-     justify-content: center;
-     display: flex;    
-   }
-  &__coinBox {
-    backdrop-filter: blur(24px);
-		background: var(--altBG);
-    border: 2px solid var(--mainColor);
-    border-radius: 77px;
+  &__footer {
     display: flex;
-    align-items: center;
-    width: fit-content;
-    align-self: center;
-    justify-content: center;
-    padding: 10px 14px;
-   }
-   &__coinImg {
-    display: flex;
-    align-items: center;
-    margin-right: 0.625rem;
-    width: 28px;
-    height: 28px;
-    border: 2px solid var(--mainColor);
-    border-radius: 62px;
-		background: var(--altBG);
-    img {
-     width: 100%;
-    }
-   }
-   &__coinAmount {
-    display: flex;
-    align-items: center;
-    span {
-    font-weight: 400;
-    font-size: 28px;
-    line-height: 100%;
-    letter-spacing: 0.01em;
-    color: var(--mainColor);
-    }
+    flex-direction: column;
   }
-  &__totalPoints {
+  &__sessionCoins {
     position: relative;
     display: flex;
     align-self: center;
@@ -130,7 +157,7 @@
     font-weight: 600;
   }
  }
- &__totalPoints-img {
+ &__sessionCoins-img {
   width: 48px;
   height: 48px;
   display: flex;
@@ -141,17 +168,33 @@
     width: 100%;
    }
  }
- &__totalPoints-text {
+ &__sessionCoins-text {
   display: flex;
   justify-content: center;
   flex-direction: column;
   gap: 4px;
 }
- &__totalPoints-coins {
+ &__sessionCoins-coins {
   font-weight: 600;
   font-size: 22px;
   line-height: 100%;
   text-align: center;
   color: var(--mainColor);
+ }
+ &__energyHint {
+  margin-top: 15px;
+  padding: 0 1.25rem;
+  order: 5;
+  display: block;
+  p {
+   font-weight: 500;
+   font-size: 12px;
+   line-height: 130%;
+   color: var(--mainColor);
+   text-align: center;
+  }
+  @media (max-height: 730px) {
+   display: none;
+  }
  }
 }
