--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -108,6 +108,7 @@
     width: 260px; 
     height: 260px; 
     overflow: hidden;
+    margin: 0 0 25px 0;
     img {        
       width: 100%;
       height: 100%;
