--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -10,7 +10,7 @@
   }
   &__gameContentBox {
     width: 100%;
-    height: 100%;
+    // height: 581px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -124,7 +124,7 @@
     z-index: 15;
     background: transparent;
     width: 100%;
-    height: 100%;
+    // height: 430px;
     img {        
       width: 100%;
       height: 100%;
