--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -2,15 +2,14 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  height: 581px;
   &__gameContent {
     top: 45px;
     width: 100%;
-    height: 581px;
+    height: 100%;
   }
   &__gameContentBox {
     width: 100%;
-    // height: 581px;
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -124,7 +123,7 @@
     z-index: 15;
     background: transparent;
     width: 100%;
-    // height: 430px;
+    height: 100%;
     img {        
       width: 100%;
       height: 100%;
