--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -104,8 +104,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 260px; 
-    height: 260px; 
+    width: 300px; 
+    height: 300px; 
     overflow: hidden;
     margin: 0 0 25px 0;
     img {        
@@ -186,6 +186,7 @@
   padding: 0 1.25rem;
   order: 5;
   display: block;
+  padding-bottom: 30px;
   p {
    font-weight: 500;
    font-size: 12px;
