--- a/src/index.scss
+++ b/src/index.scss
@@ -168,13 +168,13 @@
     overflow: hidden;
   }
 
-  .active button {
-    opacity: 1;
-    color: var(--mainColor);
-    border: 1px solid #fff;
-    background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
-    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-  }
+  // .active button {
+  //   opacity: 1;
+  //   color: var(--mainColor);
+  //   border: 1px solid #fff;
+  //   background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
+  //   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  // }
 
   .blackLine {
     border: 1px solid var(--mainColor);
