--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -179,11 +179,17 @@ body::after {
     display: flex;
     margin-top: 24px;
     align-items: center;
+    gap: 12px;
   }
   &__coinImg {
-    margin-right: 12px;
+    width: 44px;
+    height: 44px;
+    border: 2px solid var(--mainColor);
+    border-radius: 62px;
+    background: var(--altBG);
     img {
       width: 100%;
+      height: 100%;
     }
   }
   &__coinAmount {
@@ -191,11 +197,11 @@ body::after {
     align-items: center;
     justify-content: center;
     span {
-      font-weight: 400;
-      font-size: 24px;
-      line-height: 100%;
-      letter-spacing: 0.01em;
-      color: #fff;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 100%;
+        letter-spacing: 0.01em;
+        color: #1c2520;
     }
   }
   &__tabBtns {
@@ -220,7 +226,6 @@ body::after {
     }
   }
   &__tasks {
-    margin-top: 12px;
     display: none;
     &.active {
       display: flex;
@@ -236,20 +241,18 @@ body::after {
     align-items: center;
     margin-bottom: 5px;
     button {
-      padding: 12px 16px;
-      width: 100%;
-      border: 1px solid #3f3773;
-      border-radius: 10px;
-      background: rgba(8, 18, 41, 0.6);
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-      font-weight: 600;
-      font-size: 14px;
-      line-height: 1.3;
-      color: #fff;
-      text-align: start;
+        border: 1px solid #0d9047;
+        border-radius: 10px;
+        padding: 12px 24px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        background: rgba(8, 18, 41, 0.2);
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 100%;
+        letter-spacing: 0.02em;
     }
     span {
       text-align: start;
@@ -257,7 +260,8 @@ body::after {
       margin-right: 10px;
     }
     svg {
-      width: 20px;
+        position: absolute;
+        right: 37px;
     }
     p {
       display: flex;
@@ -299,14 +303,13 @@ body::after {
     width: fit-content;
     align-self: center;
     position: relative;
-    border: 1px solid #554a9c;
+    border: 1px solid #0d9047;
     border-radius: 18px;
     padding: 10px;
     gap: 10px;
     margin-top: 12px;
   }
   &__tabs-btn {
-    border-radius: 10px 10px 0 0;
     position: relative;
     z-index: 10;
     button {
@@ -316,8 +319,8 @@ body::after {
       font-size: 14px;
       line-height: 100%;
       letter-spacing: 0.02em;
-      color: #554a9c;
-      border: 1px solid #554a9c;
+      color: var(--mainColor);
+      border: 1px solid #0d9047;
       border-radius: 10px;
     }
     &.active {
@@ -325,8 +328,8 @@ body::after {
       button {
         opacity: 1;
         color: #fff;
-        border: 1px solid #fff;
-        background: linear-gradient(270deg, #1cafee 0%, #35cf6e 71.63%, #3fdb3c 100%);
+        background: #2cb726;
+        border: 1px solid #0d9047;
       }
     }
     .footerMain__activitiesHint {
@@ -347,11 +350,14 @@ body::after {
       padding: 10px 0 10px 10px;
       height: 100%;
       width: 100%;
+      background-color: transparent;
     }
     input::placeholder {
-      color: #fff;
-      font-size: 10px;
-      font-size: 0.75rem;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 140%;
+        letter-spacing: 0.02em;
+        color: var(--mainColor);
     }
     input:focus {
       outline: none;
@@ -377,15 +383,7 @@ body::after {
     }
   }
   &__walletTask-inputBtn {
-    // box-shadow: -15px 0px 17px -7px rgba(0,0,0,0.75);
-    // background: linear-gradient(87deg, #691ee2 0%, #c09aff 100%);
-    // border: 2px solid #fff;
-    // border-radius: 40px;
-    // position: absolute;
-    // height: 47px;
-    // width: 48px;
-    // top: -2px;
-    // right: -2px;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -395,23 +393,16 @@ body::after {
     top: 0;
     height: 100%;
     width: 44px;
-    backdrop-filter: blur(4px);
-    background: rgba(255, 255, 255, 0.12);
-    // justify-content: center;
-    // align-items: center;
-    // img {
-    //   width: 20px;
-    // }
+    background: #2cb726;
+  
   }
   &__walletTask-rightHint {
     display: flex;
     span {
-      font-weight: 400;
-      font-size: 9px;
-      line-height: 137%;
-      text-align: left;
-      color: rgba(255, 255, 255, 0.6);
-      text-align: right;
+        font-weight: 400;
+        font-size: 10px;
+        line-height: 100%;
+        letter-spacing: 0.03em;
     }
   }
   &__walletTask-rightBtn {
@@ -442,35 +433,29 @@ body::after {
     right: 0;
   }
   &__walletTask-left {
-    border: 1px solid #fff;
+    border: 1px solid #0d9047;
     border-radius: 31px;
     padding: 2px 12px;
-    background: linear-gradient(270deg, #1cafee 0%, #35cf6e 71.63%, #3fdb3c 100%);
-    img {
-      position: absolute;
-      right: 0;
-      top: -4px;
-      width: 20px;
+    width: 67px;
+    height: 16px;
+    background: #2cb726;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    p {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 100%;
+        letter-spacing: 0.03em;
     }
   }
   &__walletTask-input {
-    outline: 0.125rem solid #CAFFD6;
-    position: relative;
-    // font-weight: 600;
-    // font-size: 14px;
-    // align-self: flex-start;
-    // color: #fff;
-    // background: #ffffff00;
-    // display: flex;
-    // position: relative;
-    // text-align: center;
-    // flex-direction: row;
-    width: 100%;
+    border: 2px solid #0d9047;
     border-radius: 12px;
+    position: relative;
+    width: 100%;
     height: 48px;
-    background: rgba(255, 255, 255, 0.06);
-    padding-right: 50px;
-    // outline: 
+    padding-right: 56px;
   }
   &__walletTask-box {
     display: flex;
@@ -487,12 +472,10 @@ body::after {
     margin: 6px 0;
     width: 100%;
     span {
-      font-weight: 500;
-      font-size: 12px;
-      line-height: 100%;
-      letter-spacing: 0.03em;
-      color: #fff;
-      opacity: 0.72;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 100%;
+        letter-spacing: 0.03em;
     }
   }
   &__progressBar {
