--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -113,6 +113,9 @@
       height: 100%;
       position: absolute;
     } 
+    @media (max-height: 730px) {
+      margin: 0;
+    }
   }
   &__clickArea {
     display: flex;
@@ -155,6 +158,9 @@
     text-align: center;
     color: var(--mainColor);
     font-weight: 600;
+  }
+  @media (max-height: 730px) {
+    margin-bottom: 1.25rem;
   }
  }
  &__sessionCoins-img {
