--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -26,7 +26,7 @@ body::after {
   pointer-events: none;
 }
 .popupTasks_show {
-  z-index: 301;
+  z-index: 20;
   display: block;
   overflow: auto;
   pointer-events: auto;
@@ -51,7 +51,7 @@ body::after {
 }
 
 .footerMain {
-    z-index: 301;
+    z-index: 14;
     position: relative;
     margin: 0 0 10px 0;
     @media (max-width: 359px) { 
@@ -145,6 +145,7 @@ body::after {
 }
 
 .popupTasks {
+    display: flex;
   &__wrapper {
     padding: 0 12px;
   }
@@ -516,46 +517,45 @@ body::after {
 }
 
 
-.popupError {
-  z-index: 400;
-  position: absolute;
-  transition: visibility 0.8s ease 0s;
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  &__wrapper {
-    height: 100%;
-    min-height: 100%;
-    width: 100%;
-    padding: 0 30px;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  &__content {
-    flex-direction: column;
-    border: 2px solid #fff;
-    border-radius: 20px;
-    padding: 20px 40px 40px 20px;
-    position: relative;
-    background: linear-gradient(180deg, #0b1f46 0%, #000 100%);
-    transition: transform .3s ease 0s;
-    width: 100%;
-  }
-  &__close {
-    position: absolute;
-    top: 12px;
-    right: 12px;
-}
-  &__title {
-    font-size: 1.25rem;
-    position: relative;
-    color: #fff;
-    font-weight: 900;
-    line-height: 100%;
-    margin-top: 30px;
-    word-break: break-word;
-  }
-}
+// .popupError {
+//   z-index: 400;
+//   position: absolute;
+//   transition: visibility 0.8s ease 0s;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   bottom: 0;
+//   right: 0;
+//   &__wrapper {
+//     height: 100%;
+//     min-height: 100%;
+//     width: 100%;
+//     padding: 0 30px;
+//     display:flex;
+//     flex-direction: column;
+//     justify-content: center;
+//   }
+//   &__content {
+//     flex-direction: column;
+//     border: 2px solid #1c2520;
+//     border-radius: 24px;
+//     padding: 20px 40px 40px 20px;
+//     position: relative;
+//     transition: transform .3s ease 0s;
+//     width: 100%;
+//     background: #80c27d;
+//   }
+//   &__close {
+//     position: absolute;
+//     top: 12px;
+//     right: 12px;
+// }
+//   &__title {
+//     font-size: 1.25rem;
+//     position: relative;
+//     font-weight: 900;
+//     line-height: 100%;
+//     margin-top: 30px;
+//     word-break: break-word;
+//   }
+// }
