--- a/src/components/Screens/DynamicScreen/DynamicScreen.scss
+++ b/src/components/Screens/DynamicScreen/DynamicScreen.scss
@@ -1,9 +1,25 @@
 .component-container {
-  padding: 20px;
   text-align: center;
-  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  justify-content: center;
 }
-
-h4 {
-  margin: 0;
+.componentText {
+	display: flex;
+	align-items: center;
+	position: absolute;
+	top: 80%;
+	padding: 0 40px;
+	h4 {
+		font-weight: 400;
+		font-size: 24px;
+		line-height: 100%;
+		letter-spacing: 0.01em;
+		text-align: center;
+		color: var(--altColor);
+	}
 }
