--- a/src/index.scss
+++ b/src/index.scss
@@ -203,6 +203,7 @@
 }
   .innerCircle {
     border-radius: 100%;
+    position: relative;
     height: 100%;
     width: 100%;
     background-color: var(--altBG);
