referall system rework

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -169,7 +169,7 @@
       align-items: center;
       justify-content: center;
       width: 100%;
-      border: 1px solid #3f3773;
+      border: 1px solid #0d9047;
       border-radius: 10px;
       background: #3a5b4d;
       margin-top: 30px;
@@ -254,8 +254,8 @@
       }
     }
     &__item-box {
-      border: 1px solid #3f3773;
-      background: rgba(43, 47, 82, 0.3);
+      border: 1px solid #0d9047;
+      background: #3a5b4d;
       margin-top: 22px; 
       border-radius: 10px;
       width: 100%;
