--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -271,7 +271,7 @@ body::after {
         letter-spacing: 0.02em;
     }
     button:disabled {
-      background: #292f4f;
+    background: #3a5b4d;
       color: #ffffff;
       p {
         border: none;
