--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -81,7 +81,7 @@
   flex-direction: column;
   font-weight: 600;
   font-size: 22px;
-  font-family: var(--altText);
+  font-family: var(--text);
   margin-top: 15px;
   align-items: center;
   font-size: 18px;
