--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
   --mainColor: #1c2520;
   --altColor: #fff;
   --minWidth: 390px;
-  --mainBG: #9df19b;
+  --mainBG: rgba(157, 241, 155, 0.9);
   --altBG: #80c27d;
   }
   
@@ -19,6 +19,13 @@
   html, body {
     height: 100%;
     touch-action: none !important;
+  }
+
+  body {
+    background-image: url("img/cover.webp");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
   }
   
   #root {
