--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -266,7 +266,7 @@ body::after {
         letter-spacing: 0.02em;
     }
     button:disabled {
-    background: #3a5b4d;
+      background: #2cb726;
       color: #ffffff;
       p {
         border: none;
