--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -144,8 +144,8 @@
 	}
 	&__close {
 		position: absolute;
-		top: 12px;
-		right: 12px;
+		top: 0;
+		right: 0;
 	}
 	&__title {
 		margin-top: 41px;
