--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -61,8 +61,8 @@
 		padding: 12px;
 		gap: 8px;
 		margin-top: 74px;
-		left: 12px;
-		width: 97%;
+		right: 12px;
+		width: 90%;
 	}
 	&__menu-links {
 		border: 1px solid #172610;
