--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -382,8 +382,7 @@ body::after {
     }
     p {
       align-items: center;
-    background: #2cb726;
-    border: 1px solid #0d9047;
+    background: transparent;
     border-radius: 31px;
     color: #fff;
     display: flex;
