--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -149,9 +149,9 @@ body::after {
     zoom: 0.9;
   &__wrapper {
     padding: 0 12px;
+    justify-content: center;
   }
   &__content {
-    margin-top: 36px;
     position: relative;
     border: 1px solid #0d9047;
     border-radius: 20px;
