--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -63,7 +63,7 @@ body::after {
   }
   &__activities {
     display: flex;
-    // border: 1px solid #1c2520;
+    // border: 1px solid var(--mainColor);
     border-radius: 18px;
     padding: 15px 10px;
     gap: 15px;
@@ -101,7 +101,7 @@ body::after {
         line-height: 100%;
         letter-spacing: 0.03em;
         text-align: center;
-        color: #1c2520;
+        color: var(--mainColor);
       }
       img {
         margin-right: 10px;
@@ -111,7 +111,7 @@ body::after {
   &__activitiesBtn:first-child {
     button {
         background: #2cb726;
-         color: #1c2520;
+         color: var(--mainColor);
          font-size: 22px;
     }
     span {
@@ -170,7 +170,7 @@ body::after {
         font-size: 26px;
         line-height: 100%;
         width: 75%;
-        color: #1c2520;
+        color: var(--mainColor);
       }
   }
   &__coins {
@@ -199,7 +199,7 @@ body::after {
         font-size: 26px;
         line-height: 100%;
         letter-spacing: 0.01em;
-        color: #1c2520;
+        color: var(--mainColor);
     }
   }
   &__tabBtns {
@@ -466,7 +466,7 @@ body::after {
 //   }
 //   &__content {
 //     flex-direction: column;
-//     border: 2px solid #1c2520;
+//     border: 2px solid var(--mainColor);
 //     border-radius: 24px;
 //     padding: 20px 40px 40px 20px;
 //     position: relative;
